// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-snooze Renders \`extra-details-snooze\` with date in previous month 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Snooze</strong>
        <div>By : snooze-author</div>
        <div>Date : 07/08/2013 19:00:00</div>
        <div>End : 07/08/2013 19:00:00</div><div>Initiator : snooze-initiator</div><div class=\\"c-extra-details__message\\">Comment : snooze-message</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#e91e63"
      icon="alarm"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-snooze Renders \`extra-details-snooze\` with full snooze 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Snooze</strong>
        <div>By : snooze-author</div>
        <div>Date : 6:00:00</div>
        <div>End : 6:00:00</div><div>Initiator : snooze-initiator</div><div class=\\"c-extra-details__message\\">Comment : snooze-message</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#e91e63"
      icon="alarm"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-snooze Renders \`extra-details-snooze\` without initiator 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Snooze</strong>
        <div>By : snooze-author</div>
        <div>Date : 6:00:00</div>
        <div>End : 6:00:00</div><div class=\\"c-extra-details__message\\">Comment : snooze-message</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#e91e63"
      icon="alarm"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-snooze Renders \`extra-details-snooze\` without message 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\"><strong>Snooze</strong>
        <div>By : snooze-author</div>
        <div>Date : 6:00:00</div>
        <div>End : 6:00:00</div><div>Initiator : snooze-initiator</div></div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#e91e63"
      icon="alarm"
    />
  </c-simple-tooltip-stub>
</div>
`;
